# papersignal

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: PhonePreview.tsx  RichEditor.tsx
src/lib/: ai.ts  articleReference.ts  card.ts  storage.ts  templates.ts  types.ts
