[package]
name = "papersignal"
version = "0.1.6"
description = "LayoutGo local-first content studio for WeChat and Xiaohongshu"
authors = ["LayoutGo"]
edition = "2021"

[lib]
name = "papersignal_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3.6.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
